--- a/ESC_POS_NET_CORE.csproj
+++ b/ESC_POS_NET_CORE.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>zaLTys</Authors>
+    <PackageId>ESC-POS-NET-CORE</PackageId>
+    <Product>ESC-POS-NET-CORE</Product>
   </PropertyGroup>
 
   <ItemGroup>
